--- a/flexbox-business-site-starting/styles.css
+++ b/flexbox-business-site-starting/styles.css
@@ -36,28 +36,34 @@ header h2 {
 }
 
 header {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     position: fixed;
     background-color: black;
     width: 100%;
-    padding-bottom: 30px;
     top: 0;
     z-index: 50;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
 }
 
 header nav {
-    width: 100%;
     display: flex;
-    gap: 20px;
-    justify-content: center;
-    float: none;
-    
+    flex-direction: column; 
+    gap: 10px;
+    text-align: right;
+    margin-right: 30px; 
+    margin-top: 40px; 
+
+
 }
 
 header a {
     text-decoration: none;
     color: rgb(209, 204, 204);
     text-transform: uppercase;
+    width: 120px;
 }
 
 header a:hover {
@@ -94,35 +100,10 @@ main {
     100% { background-image: url(./images/gallery/drinks.png);}
 }
 
-/* #gallery {
-    overflow: hidden;
-    white-space: nowrap;
-    margin-top: 280px;
-    margin-bottom: 60px;
-    scroll-margin-top: 500px;
-
-    /* width: 100%;
-    height: 500px;
-    overflow: hidden;
-    position: relative;  /
-} 
-
-.gallery-slide {
-    width: 100%;
-    animation: 20s slide infinite; 
-    display: inline-block; 
-    /* background-size: cover;
-    background-position: center;
-    animation: galleryCycle 16s infinite; /
-}
-
-.gallery-slide img {
-    height: 500px;
-}  */
 
 
 #gallery {
-    padding-top: 280px; /* */
+    padding-top: 230px; /* */
     padding-bottom: 30px;;
     overflow: hidden;
     white-space: nowrap;
@@ -131,7 +112,7 @@ main {
 
 .gallery-slide {
     display: inline-block;
-    animation: 40s slide infinite linear;
+    animation: 60s slide infinite linear;
 }
 
 .gallery-slide img {
@@ -155,7 +136,7 @@ main {
     background-color:  rgb(184, 178, 10);
     color: black;
     margin-bottom: 60px;
-    scroll-margin-top: 280px;
+    scroll-margin-top: 210px;
 }
 
 .mission-text {
@@ -187,7 +168,7 @@ main {
     margin: 40px;
     padding-bottom: 60px;
     width: 100%;
-    scroll-margin-top: 280px;
+    scroll-margin-top: 220px;
 }
 
 #locations h2 {
@@ -223,15 +204,19 @@ main {
 #team {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
-    justify-items: center;
+    align-items: center;
     padding-bottom: 80px;
-    scroll-margin-top: 280px;
+    scroll-margin-top: 210px;
+    width: 100%;
 }
 
 #members {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 #team h2 {
