--- a/responsive-club-starting/starting/styles.css
+++ b/responsive-club-starting/starting/styles.css
@@ -1,15 +1,27 @@
 /* PAGE COLORS */
-/*   #545454 = DARK GRAY
-     #e7e5e3 = SOFT WHITE
-     #ff914d = ORANGE
-      #0cc0df = AQUA BLUE
+/*  #545454 = DARK GRAY
+    #e7e5e3 = SOFT WHITE
+    #ff914d = ORANGE
+    #0cc0df = AQUA BLUE
+*/
+
+/* 
+Making images toggle to certain percentages 
+in terms of width after a certain minimum screen size.
+Using a @media rule to change page layout and 
+behavior based on size breakpoints.
+Employing responsive units em and rem to size 
+and space elements with width and padding.
 */
 
     html {
         font-size: 18px;
+        height: 100vh;
       }
        main {
         background-color: #e7e5e3; 
+        overflow-x: hidden;
+        width: 100%;
        }   
       
       
@@ -56,23 +68,33 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        background-image: url(./images/);
+        background-color:#ff914d;
         border: 6px solid #ff914d;
         
       }
+
+      .welcome-title {
+        background-color: #e7e5e3;
+        width: auto;
+        border-radius: 50px;
+        margin: 20px;
+        border: 5px solid #d96822;
+      }
       
       .welcome h2 {
+        font-size: 2rem;
         color: #0cc0df;
         text-align: center;
         padding-left: 20px;
         padding-right: 20px;
-        margin-bottom: -30px;
+        margin-bottom: -5px;
       }
       
       
       .welcome-text p {
         width: 600px;
         color: #36220a;
+        font-size: 1.1rem;
       }
 
       .register {
@@ -80,7 +102,7 @@
       }
 
       .btn {
-        background-color: #0cc0df;
+        background-color: #545454;
         border: none;
         padding: 10px;
         border-radius: 5px;
@@ -89,7 +111,7 @@
       }
 
       .btn:hover {
-        background-color: #ff914d;
+        background-color: #0cc0df;
         cursor: pointer;
         box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
       }
@@ -97,7 +119,7 @@
       .btn:active {
         transform: translateY(2px);
         box-shadow: 0 12px 5px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-        background-color: #d96822;
+        background-color: #08879d;
       }
       
       
@@ -108,6 +130,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+        background-color: #545454;
         
       }
       
@@ -121,15 +144,27 @@
       }
 
       .image img {
-        height: 250px;
-        width: auto;
+        height: 300px;
+        width: 450px;
         padding: 10px;
       }
       
       /* QUOTE Styles */
       
+      .testimonials {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        background-color: #0cc0df;
+      }
+
       .quote {
-        width: 100%;
+        width: 400px;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+
       }
       
       blockquote {
@@ -139,9 +174,38 @@
         padding: 10px;
       
       }
+
+      .person {
+        font-size: 1.2rem;
+      }
+
+      .date {
+        font-size: .8rem;
+      }
       
       .quote-text {
         font-size: 1.2rem;
+      }
+
+      .job {
+        font-size: .8rem;
+      }
+
+
+
+
+      /* FOOTER Styles */
+
+      footer {
+        background-color: #545454;
+        height: 80px;
+        
+      }
+
+      footer p {
+        text-align: center;
+        line-height: 1px;
+        padding-top: 20px;
       }
       
       
